src/assets/CSS/styles.css
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
	color: rgba(var(--secondary-color));
    font-family: 'EB Garamond', serif;
    /* outline: 1px solid yellowgreen; */
    scroll-behavior: smooth;
    /* color: rgb(204, 204, 204); */
    text-decoration: none;
    list-style: none;
}

:root {
    --primary-color: 39, 40, 47;
    --secondary-color: 204, 204, 204;
    --black: 0, 0, 0;
    --tertiary-color: 0, 169, 226;
    --white: 255, 255, 255;
    --grey: 61, 61, 61;
    --pink: 233, 12, 218
}

.text-tertiary {
	color: rgba(var(--tertiary-color));
}

body {
	position: relative;
	background-color: rgba(var(--black), 1);
}

/* HEADER SECTION  */
header {
	width: 100%;
	height: clamp(100px, 100px, auto);
	padding: 20px;
    background-color: rgba(var(--black), 0.7);
	position: fixed;
	display: flex;
	justify-content: center;
    font-size: 1.2rem;
    align-items: center;
    border-bottom: 1px solid rgba(var(--secondary-color), 0.3);
    z-index: 9999;
    transition: top 0.3s;
    backdrop-filter: blur(10px);
}

header nav ul {
	display: inline-flex;
    justify-content: center;
    flex-flow: row wrap;
	list-style: none;
    width: 100vw;
    padding: 0 20px;
}

header ul li {
	margin: auto 10px auto 10px;
}

header ul li:first-child {
	margin-right: auto;
    font-size: 2rem;
}

header nav ul li a {
	text-decoration: none;
    transition: color 0.2s;
}

header nav ul li a:hover {
	color: rgba(var(--tertiary-color), 1);
}

.activeLink {
    color: rgba(var(--tertiary-color), 1);
}

section {
    height: auto;
}

/* HERO SECTION */
#hero {
    position: relative;
    height: clamp(500px, 100vh, 100vh);
    box-sizing: content-box;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: auto;
    text-align: center;
    background-image: url('../images/elegent.webp');
    background-repeat: no-repeat;
    background-position: center;
    background-clip: padding-box;
    background-size: cover;
    z-index: 3;
}

h1 {
    position: absolute;
    bottom: 100px;
    font-size: 6rem;
    line-height: 1;
    width: 100%;
    animation-name: glowing;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    animation-direction: normal;
    text-shadow: 5px 5px black;
}

#hero h2 {
    position: absolute;
    width: 100%;
    padding: 20px;
    bottom: 30px;
    color: rgba(var(--tertiary-color));
}

#hero img {
    height: 70%;
    outline-offset: 10px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: -1;
    border: 1em solid rgb(63, 35, 3);
    box-shadow: 10px 10px 20px black;
}



#hero h2 {
    text-shadow: 2px 2px rgba(var(--black), 1);
}

/* ABOUT SECTION  */
#about {
    position: relative;
    width: 100%;
    min-height: 100vh;
    height: auto;
    padding: 20px;
    display: flex;
    flex-flow: nowrap column;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-color: rgba(var(--grey), 0.5);
    background-image: url('../images/elegent.webp');
    background-repeat: repeat;
    background-position: center;
}

#about::before {
    position: absolute;
    content: '';
    width: 50px;
    height: 50px;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(var(--black));
    border-radius: 50%;
}

.indent-20 {
    text-indent: 20px;
}

.indent-40 {
    text-indent: 40px;
}

.section-title {
    font-size: 2rem;
    text-align: center;
    padding: 10px;
    margin: 100px 0px;
    width: max-content;
    z-index: 10;
    font-weight: bold;
    color: rgba(var(--black));
    background-color: rgba(var(--secondary-color), 1);
}

#about .about-container {
    padding: 10px;
    margin-bottom: 100px;
}

#about img {
    width: 300px;
    height: 300px;
    z-index: -1;
    border: 1em solid rgb(63, 35, 3);
    box-shadow: 10px 10px 20px black;
}

#about .about-container > div:last-child {
    text-align: center;
    min-width: 270px;
    width: 95%;
    max-width: 900px;
    background-color: rgba(var(--black), 0.7);
    backdrop-filter: blur(1px);
    padding: 1em;
}

.text-center {
    text-align: center;
}

.text-start {
    text-align: start;
}

#about p {
    line-height: 1.5;
    font-size: 1.2rem;
}

.underline {
    border-bottom: 1px solid rgba(var(--secondary-color));
    padding: 20px;
}

/* WORK SECTION  */
#work {
    width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: nowrap column;
    padding: 100px 0;
    background-image: url('../images/elegent.webp');
    background-size: contain;
}

.grid-col-span-2 {
    grid-column: span 2;
}

#projectsContainer {
    width: 95%;
    display: grid;
    height: auto;
    gap: 20px;  
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-auto-rows: 400px;
    z-index: 3;
    position: relative;
}

#projectsContainer> a {
    cursor: zoom-in;
}

.grid-children {
    height: 150px;
    display: flex;
    border: 0.8em solid rgb(63, 35, 3);
    border-radius: 5px;
    background-position: center;
    background-size: cover;
    min-height: 300px;
    box-shadow: 10px 10px 20px rgba(var(--black));
    position: relative;
}



.grid-children:before {
    content:'';
    position: absolute;
    top: -15%;
    left: 50%;
    margin-left: -50px;
    width: 0;
    height: 0;
    width: 100px;
    height: 100px;
    border: 3px solid rgba(var(--secondary-color), 1);
    transform: rotate(45deg);
    z-index: -1;
    box-shadow: 10px 10px 20px rgba(var(--black));
}

.project-tags {
    position: absolute;
    padding: 2em;
    top: -10;
    /* right: 0; */
    left: 0;
    bottom: 0;
    /* width: 100%; */
    display: flex;
    background-color: rgba(var(--black), 0.7);
    backdrop-filter: blur(10px);
    flex-flow: column nowrap;
    justify-content: space-around;
    align-self: end;
    z-index: 10;
}

.grid-children:hover {
    
}

.repo-link {
    /* background-color: rgb(var(--black)); */
    border-radius: 5px;
    margin: 10px;
}

.featured {
    grid-column: 1 / -1;
}

.anytime-books {
    background-image: url(../images/anytimeBooks.jpg);
}
.homeroom {
    background-image: url(../images/homeroom.jpg);
}
.run-buddy {
    background-image: url(../images/runnbudyimagejpg.jpg);
}
.weather-app {
    background-image: url(../images/weatherappscreenshot.jpg);
}
.timed-coding-quiz {
    background-image: url(../images/timedcdoingquiz.jpg);
}
.work-day-scheduler {
    background-image: url(../images/dailycallendar.jpg);
}
.star-wars {
    background-image: url(../images/starwars.jpg);
} 

.btn {
    padding: 0.4em 4em;
    border: 1px solid transparent;
    border-radius: 10px;
    font-size: 1.2rem;
    background-color: rgba(var(--tertiary-color));
    color: rgba(var(--black), 1);
    font-weight: bold;
    /* margin-top: 50px; */
    text-decoration: none;
    transition: background-color 0.1s, color 0.1s;
    cursor: pointer;
    box-shadow: 10px 10px 20px rgba(var(--black));
    width: max-content;
}

.btn:hover {
    color: rgba(var(--secondary-color));
    background-color: transparent;
    border: 1px solid rgba(var(--secondary-color));
}


/* CONTACT SECTION  */
#contact {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-image: url('../images/elegent.webp');
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

#contact form {
    min-width: 350px;
    width: 70%;
    max-width: 800px;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    padding: 10px 20px;
    background-color: rgba(var(--black), 0.7);
    backdrop-filter: blur(1px);
    position: relative;
    z-index: 1;
    overflow: unset;
    margin: 20px 0;
}


#contact form * {
    font-weight: bold;
    font-size: 1.1rem;
}

#contact form > div {
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-around;
    padding: 20px 0;
}

#contact form label {
    color: rgb(var(--tertiary-color));
    padding: 5px 0;
    font-size: 1.5rem;
}

#contact form input {
    padding: 10px;
    color: rgba(var(--black));
    font-family: sans-serif;
    background-color: rgba(var(--secondary-color), 1);
    border-radius: 5px;
}

#contact form textarea {
    resize: vertical;
    min-height: 200px;
    max-height: 500px;
    background-color: rgba(var(--secondary-color), 1);
    color: rgba(var(--black));
    padding: 10px;
    border-radius: 5px;
}

/* FOOTER  */
footer {
    border-top: 1px solid rgba(var(--secondary-color), 0.3);
    height: 200px;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
    align-items: center;
    background-color: rgba(var(--black), 1);
    text-align: center;
    padding: 10px;
}

footer * {
    font-size: 1rem;
}

footer .social-media-div {
    display: flex;
    flex-flow: column wrap;
    width: 300px;
    text-align: center;
}

.social-media-div > * {
    margin: 10px;
}


footer ul {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;

}

footer li {
    margin: 0 10px;
}

.logos {
    width: 32px;
    height: 32px;
}

footer h3 {
    /* bottom: 20px; */
    color: rgba(var(--secondary-color), 1) !important;

}

/* MEDIA QUERIES  */
@media only screen and (max-width: 576px) {
    /* 768px 992px 1400px */
    #hero img {
        height: auto;
        width: 90%;
    }
    h1 {
        font-size: 4rem;
    }

    /* about  */
    #about {
        padding: 0px;
    }
}

@media only screen and (min-width: 576px) {
    /* 768px 992px 1400px */
    #hero img {
        height: auto;
        width: 500px;
    }
    h1 {
        font-size: 5rem;
    }

    /* about  */
    #about div {
        padding: 2rem;
    }
}

@media only screen and (min-width: 768px) {
    h1 {
        font-size: 6rem;
    }
    #hero img {
        height: auto;
        width: 600px;
    }
}

@media only screen and (min-width: 992px) {
    /* HERO  */
    #hero h1 {
        font-size: 8rem;
    }

    /* CONTACT  */

    .logos {
        filter: brightness(70%);
        transition: filter 0.2s;
    }

    .logos:hover {
        filter: brightness(100%);
    }
}

@media only screen and (min-width: 1400px) {

}

